--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "TokenKey": "my super secret key",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
   }
