--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "TokenKey": "my super secret key",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OSKT1GA\\SQLEXPRESS;Database=BookLibrary;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-OSKT1GA\\SQLEXPRESS;Database=DatingApp;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
